--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     class="bg-[#f0f4f8] dark:bg-[#0a1628] text-slate-700 dark:text-slate-300 font-['DM_Sans'] transition-colors duration-300 m-0">
 
     <button id="theme-toggle" title="Cambiar modo claro / oscuro" onclick="toggleTheme()"
-        class="fixed top-3.5 right-5 z-[9999] w-11 h-11 rounded-xl border border-black/10 dark:border-white/10 bg-white dark:bg-white/5 text-amber-500 flex items-center justify-center shadow-[0_4px_20px_rgba(0,0,0,0.1)] dark:shadow-[0_4px_20px_rgba(0,0,0,0.2)] hover:scale-110 hover:shadow-[0_6px_24px_rgba(245,158,11,0.25)] hover:border-amber-500/40 transition-all backdrop-blur-md cursor-pointer">
+        class="fixed top-3.5 right-5 z-[9999] w-11 h-11  border border-black/10 dark:border-white/10 bg-white dark:bg-white/5 text-amber-500 flex items-center justify-center shadow-[0_4px_20px_rgba(0,0,0,0.1)] dark:shadow-[0_4px_20px_rgba(0,0,0,0.2)] hover:scale-110 hover:shadow-[0_6px_24px_rgba(245,158,11,0.25)] hover:border-amber-500/40 transition-all backdrop-blur-md cursor-pointer">
 
         <svg class="hidden dark:block" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
             stroke-width="2" stroke-linecap="round">
@@ -79,7 +79,7 @@
 
             <div class="pt-9 px-10 pb-7 text-center border-b border-black/5 dark:border-white/5">
                 <div
-                    class="inline-flex items-center justify-center w-14 h-14 rounded-xl bg-amber-500/10 dark:bg-amber-500/10 border border-amber-500/25 mb-4">
+                    class="inline-flex items-center justify-center w-14 h-14  bg-amber-500/10 dark:bg-amber-500/10 border border-amber-500/25 mb-4">
                     <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="#f59e0b" stroke-width="1.8"
                         stroke-linecap="round" stroke-linejoin="round">
                         <path d="M3 17l2-2h14l2 2" />
@@ -350,7 +350,7 @@
 
                 <div class="grid grid-cols-[1fr_340px] gap-5">
                     <div
-                        class="bg-white dark:bg-white/5 border border-slate-200 dark:border-white/10 rounded-xl overflow-hidden shadow-sm dark:shadow-none transition-colors">
+                        class="bg-white dark:bg-white/5 border border-slate-200 dark:border-white/10  overflow-hidden shadow-sm dark:shadow-none transition-colors">
                         <div
                             class="bg-slate-50 dark:bg-white/5 border-b border-slate-200 dark:border-white/10 px-5 py-3.5 flex items-center justify-between transition-colors">
                             <span
@@ -545,7 +545,7 @@
                         </div>
 
                         <div
-                            class="bg-white dark:bg-white/5 border border-slate-200 dark:border-white/10 rounded-xl overflow-hidden shadow-sm dark:shadow-none flex-1 flex flex-col transition-colors">
+                            class="bg-white dark:bg-white/5 border border-slate-200 dark:border-white/10  overflow-hidden shadow-sm dark:shadow-none flex-1 flex flex-col transition-colors">
                             <div
                                 class="bg-slate-50 dark:bg-white/5 border-b border-slate-200 dark:border-white/10 px-5 py-3.5 flex items-center justify-between transition-colors">
                                 <span
@@ -669,7 +669,7 @@
         </div>
 
         <div
-            class="bg-white dark:bg-white/5 border border-slate-200 dark:border-white/10 rounded-xl overflow-hidden shadow-sm dark:shadow-none mb-5 transition-colors">
+            class="bg-white dark:bg-white/5 border border-slate-200 dark:border-white/10  overflow-hidden shadow-sm dark:shadow-none mb-5 transition-colors">
             <div class="py-4.5 px-5">
                 <div class="grid grid-cols-5 gap-3.5 items-end">
                     <div>
@@ -740,7 +740,7 @@
         </div>
 
         <div
-            class="bg-white dark:bg-white/5 border border-slate-200 dark:border-white/10 rounded-xl overflow-hidden shadow-sm dark:shadow-none transition-colors">
+            class="bg-white dark:bg-white/5 border border-slate-200 dark:border-white/10  overflow-hidden shadow-sm dark:shadow-none transition-colors">
             <div
                 class="bg-slate-50 dark:bg-white/5 border-b border-slate-200 dark:border-white/10 px-5 py-3.5 flex items-center justify-between transition-colors">
                 <span
@@ -955,7 +955,7 @@
 
         <div class="grid grid-cols-[1fr_360px] gap-6">
             <div
-                class="bg-white dark:bg-white/5 border border-slate-200 dark:border-white/10 rounded-xl overflow-hidden shadow-sm dark:shadow-none transition-colors">
+                class="bg-white dark:bg-white/5 border border-slate-200 dark:border-white/10  overflow-hidden shadow-sm dark:shadow-none transition-colors">
                 <div
                     class="bg-slate-50 dark:bg-white/5 border-b border-slate-200 dark:border-white/10 px-5 py-3.5 flex items-center justify-between transition-colors">
                     <span
@@ -1037,7 +1037,7 @@
                             class="font-['Barlow_Condensed'] text-[10px] font-bold tracking-[0.12em] uppercase text-slate-500 dark:text-slate-400 block mb-1.5 transition-colors">Fotos
                             adjuntas</span>
                         <div
-                            class="border-2 border-dashed border-amber-500/40 dark:border-amber-500/20 rounded-xl p-5 text-center bg-amber-500/5 dark:bg-amber-500/5">
+                            class="border-2 border-dashed border-amber-500/40 dark:border-amber-500/20  p-5 text-center bg-amber-500/5 dark:bg-amber-500/5">
                             <svg class="mx-auto mb-2 opacity-30" width="28" height="28" viewBox="0 0 24 24" fill="none"
                                 stroke="#f59e0b" stroke-width="1.5">
                                 <rect x="3" y="3" width="18" height="18" rx="2" />
@@ -1069,7 +1069,7 @@
 
             <div class="flex flex-col gap-4">
                 <div
-                    class="bg-white dark:bg-white/5 border border-slate-200 dark:border-white/10 rounded-xl overflow-hidden shadow-sm dark:shadow-none transition-colors">
+                    class="bg-white dark:bg-white/5 border border-slate-200 dark:border-white/10  overflow-hidden shadow-sm dark:shadow-none transition-colors">
                     <div
                         class="bg-slate-50 dark:bg-white/5 border-b border-slate-200 dark:border-white/10 px-5 py-3.5 flex items-center justify-between transition-colors">
                         <span
@@ -1126,7 +1126,7 @@
                     </div>
                 </div>
                 <div
-                    class="bg-white dark:bg-white/5 border border-slate-200 dark:border-white/10 rounded-xl overflow-hidden shadow-sm dark:shadow-none transition-colors">
+                    class="bg-white dark:bg-white/5 border border-slate-200 dark:border-white/10  overflow-hidden shadow-sm dark:shadow-none transition-colors">
                     <div class="p-4 flex gap-2.5">
                         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#f59e0b" stroke-width="2"
                             class="shrink-0 mt-0.5">
@@ -1172,7 +1172,7 @@
 
         <div class="grid grid-cols-[1fr_380px] gap-5">
             <div
-                class="bg-white dark:bg-white/5 border border-slate-200 dark:border-white/10 rounded-xl overflow-hidden shadow-sm dark:shadow-none transition-colors">
+                class="bg-white dark:bg-white/5 border border-slate-200 dark:border-white/10  overflow-hidden shadow-sm dark:shadow-none transition-colors">
                 <div class="overflow-x-auto">
                     <table class="w-full border-collapse">
                         <thead>
@@ -1323,7 +1323,7 @@
             </div>
 
             <div
-                class="bg-white dark:bg-white/5 border border-slate-200 dark:border-white/10 rounded-xl overflow-hidden shadow-sm dark:shadow-none transition-colors">
+                class="bg-white dark:bg-white/5 border border-slate-200 dark:border-white/10  overflow-hidden shadow-sm dark:shadow-none transition-colors">
                 <div
                     class="bg-slate-50 dark:bg-white/5 border-b border-slate-200 dark:border-white/10 px-5 py-3.5 flex items-center justify-between transition-colors">
                     <div>
@@ -1501,7 +1501,7 @@
 
             <div class="flex flex-col gap-3.5">
                 <div
-                    class="bg-white dark:bg-white/5 border border-slate-200 dark:border-white/10 rounded-xl overflow-hidden shadow-sm dark:shadow-none transition-colors">
+                    class="bg-white dark:bg-white/5 border border-slate-200 dark:border-white/10  overflow-hidden shadow-sm dark:shadow-none transition-colors">
                     <div
                         class="bg-slate-50 dark:bg-white/5 border-b border-slate-200 dark:border-white/10 px-4 py-3 flex items-center justify-between transition-colors">
                         <span
@@ -1535,7 +1535,7 @@
                 </div>
 
                 <div
-                    class="bg-white dark:bg-white/5 border border-slate-200 dark:border-white/10 rounded-xl overflow-hidden shadow-sm dark:shadow-none transition-colors">
+                    class="bg-white dark:bg-white/5 border border-slate-200 dark:border-white/10  overflow-hidden shadow-sm dark:shadow-none transition-colors">
                     <div
                         class="bg-slate-50 dark:bg-white/5 border-b border-slate-200 dark:border-white/10 px-4 py-3 flex items-center justify-between transition-colors">
                         <span
@@ -1580,7 +1580,7 @@
                 </div>
 
                 <div
-                    class="bg-white dark:bg-white/5 border border-slate-200 dark:border-white/10 rounded-xl overflow-hidden shadow-sm dark:shadow-none transition-colors">
+                    class="bg-white dark:bg-white/5 border border-slate-200 dark:border-white/10  overflow-hidden shadow-sm dark:shadow-none transition-colors">
                     <div class="p-3.5 px-4 border-b border-black/5 dark:border-white/5">
                         <div class="flex items-center gap-2 mb-2">
                             <div class="w-2 h-2 rounded-full bg-amber-500 shadow-[0_0_8px_#f59e0b] shrink-0"></div>
@@ -1617,7 +1617,7 @@
             </div>
 
             <div id="mapa-gis"
-                class="h-[520px] rounded-xl border border-slate-200 dark:border-white/10 bg-slate-50 dark:bg-white/5 relative z-10 transition-colors [&&_.leaflet-div-icon]:bg-transparent [&&_.leaflet-div-icon]:border-none">
+                class="h-[520px]  border border-slate-200 dark:border-white/10 bg-slate-50 dark:bg-white/5 relative z-10 transition-colors [&&_.leaflet-div-icon]:bg-transparent [&&_.leaflet-div-icon]:border-none">
             </div>
 
         </div>
